--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -39,4 +39,47 @@ body {
   padding: 100px 20px;
   margin-top: 60px; // to avoid content hidden by fixed navbar
   border-bottom: 1px solid #ccc;
+  display: flex;
+  flex-direction: column; /* stack children vertically */
+  align-items: center;    /* horizontally center each child */
+  gap: 20px;              /* optional spacing between items */
+}
+
+/* carousel stuff*/
+
+.carousel {
+  position: relative;
+  width: 600px;
+  overflow: hidden;
+
+  .carousel-images {
+    display: flex;
+    transition: transform 0.5s ease;
+  }
+
+  img {
+    width: 600px;
+    flex-shrink: 0;
+  }
+
+  .carousel-button {
+    position: absolute;
+    top: 50%;
+    background: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    transform: translateY(-50%);
+    font-size: 24px;
+    opacity: 0.7;
+    z-index: 10;
+  }
+
+  .carousel-button.left {
+    left: 10px;
+  }
+
+  .carousel-button.right {
+    right: 10px;
+  }
 }
