--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -35,6 +35,11 @@ body {
   }
 }
 
+.navbar button.active {
+  background-color: #777;
+  font-weight: bold;
+}
+
 .animal-section {
   padding: 100px 20px;
   margin-top: 60px; // to avoid content hidden by fixed navbar
@@ -83,3 +88,69 @@ body {
     right: 10px;
   }
 }
+
+
+/* Modal and column stuff */
+
+.imgmodal-container {
+  width: 960px;
+  display: flex;
+  justify-content: space-between;
+  margin: 20px auto;
+}
+
+.imgmodal-photo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  cursor: pointer;
+
+  img {
+    width: 300px;
+    height: 200px;
+    object-fit: cover;
+  }
+
+  .imgmodal-caption {
+    margin-top: 8px;
+    font-weight: bold;
+    text-align: center;
+  }
+}
+
+.imgmodal-modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0,0,0,0.6);
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+
+// .imgmodal-modal.active {
+//     display: flex;
+// }
+
+.imgmodal-modal-content {
+  background: white;
+  padding: 20px 30px;
+  max-width: 500px;
+  border-radius: 8px;
+  position: relative;
+  text-align: center;
+}
+
+.imgmodal-close-btn {
+  position: absolute;
+  top: 8px;
+  right: 12px;
+  font-size: 23px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
