--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -7,28 +7,38 @@ body {
   font-family: $font-family;
 }
 
+$navbar-bg-color: #333;
+
 .navbar {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: #333;
+  background-color: $navbar-bg-color;
   padding: 2rem;
   display: flex;
   justify-content: center;
   gap: 2rem;
   z-index: 1000;
-  transition: padding 0.3s ease;
+  transition: padding 0.3s ease, font-size 0.3s ease;
+  button {
+    font-size: 2rem; // expanded state font size
+    transition: font-size 0.3s; // smooth transition
+  }
 }
 
 .navbar.collapsed {
   padding: 0.5rem 1rem;  // less vertical padding when collapsed
+//   font-size: 1rem;
+  button {
+    font-size: 1rem; // collapsed state font size
+  }
 }
 
 .navbar button {
   background: none;
   border: none;
   color: white;
-  font-size: 1rem;
+  font-size: 2rem;
   cursor: pointer;
   padding: 0.5rem 1rem;
 
